// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionItem /> should render when [ready=false] 1`] = `
<Box__LinkBox
  key="Foo Bar"
  to="/subtraction/Foo Bar"
>
  <strong>
    Foo Bar
  </strong>
  <Flex
    alignContent="stretch"
    alignItems="center"
    className="pull-right"
    direction="row"
    justifyContent="flex-start"
    wrap="nowrap"
  >
    <SubtractionItemIcon
      ready={false}
    />
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      pad={true}
      shrink={1}
    >
      <strong>
        Importing
      </strong>
    </FlexItem>
  </Flex>
</Box__LinkBox>
`;

exports[`<SubtractionItem /> should render when [ready=true] 1`] = `
<Box__LinkBox
  key="Foo Bar"
  to="/subtraction/Foo Bar"
>
  <strong>
    Foo Bar
  </strong>
  <Flex
    alignContent="stretch"
    alignItems="center"
    className="pull-right"
    direction="row"
    justifyContent="flex-start"
    wrap="nowrap"
  >
    <SubtractionItemIcon
      ready={true}
    />
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      pad={true}
      shrink={1}
    >
      <strong>
        Ready
      </strong>
    </FlexItem>
  </Flex>
</Box__LinkBox>
`;

exports[`<SubtractionItemIcon /> should render when [ready=false] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<SubtractionItemIcon /> should render when [ready=true] 1`] = `
<Icon
  bsStyle="success"
  faStyle="fas"
  fixedWidth={false}
  name="check"
  pullRight={false}
/>
`;
